# ForJack

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_TASKS.md  Dockerfile  HANDOFF.md  PROMPT_FOR_CLAUDE.md  README.md  SNAPSHOT.md  alembic.ini  architecture.md  conftest.py  dashboard.html  docker-compose.yml  pyproject.toml  requirements.txt  storytelling-bot  storytelling_bot.py
.claude/: settings.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_facts_unique_idx.py  0003_persons_and_relations.py  (+3 more)
audit/: anthropic_sample.csv  cost_analysis.md  stripe_sample.csv  theranos_sample.csv
data/: watchlist.json
deploy/: docker-compose.prod.yml  nginx.conf  setup.sh  storyteller.service  storyteller.timer  update.sh
docs/: architecture_v0.2.docx  deck_v0.2.pptx  example_dashboard_v0.2.html
examples/: accumulator_demo_report.json  accumulator_v0.2_report.json  run_demo.sh
reports/: anthropic.json  theranos.json
tests/: conftest.py  test_api.py  test_archival_collector.py  test_classifier.py  test_collectors_mock.py  test_decision_engine.py  test_delta_report.py  test_e2e.py  test_embedder.py  test_event_watcher.py  test_expert_critic.py  test_expert_profile.py  test_faithfulness.py  test_focus_prompts.py  test_interview_collector.py  test_langfuse_integration.py  test_person_resolver.py  test_postgres_persistence.py  test_quote_decomposer.py  test_research_collector.py  test_resolver_consensus.py  test_resolver_disambiguation.py  test_sanctions_checker.py  test_storage.py  test_workflow_transitions.py
(+62 files in other folders)
