[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "storytelling-bot"
version = "0.1.0"
description = "Multi-agent system that fills an 8-layer storytelling data lake on companies and founders, builds timelines and surfaces red flags."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Analyst team" }]
license = { text = "Internal" }

[project.scripts]
storyteller = "storytelling_bot.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --import-mode=importlib"
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501", "B008", "B904", "B905", "PLC0415", "RUF001"]
